@@ -12,7 +12,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkUnixWm.c,v 1.40 2004/01/31 20:27:52 jenglish Exp $
+ * RCS: @(#) $Id: tkUnixWm.c,v 1.41 2004/04/04 20:08:39 jenglish Exp $
  */
 
 #include "tkPort.h"
@@ -2279,6 +2279,13 @@ WmMaxsizeCmd(tkwin, winPtr, interp, objc, objv)
     wmPtr->maxWidth = width;
     wmPtr->maxHeight = height;
     wmPtr->flags |= WM_UPDATE_SIZE_HINTS;
+
+    if (width <= 0 && height <= 0) {
+	wmPtr->sizeHintsFlags &= ~PMaxSize;
+    } else {
+	wmPtr->sizeHintsFlags |= PMaxSize;
+    }
+
     WmUpdateGeom(wmPtr, winPtr);
     return TCL_OK;
 }
@@ -4269,7 +4276,7 @@ UpdateSizeHints(winPtr, newWidth, newHeight)
     hintsPtr->max_aspect.x = wmPtr->maxAspect.x;
     hintsPtr->max_aspect.y = wmPtr->maxAspect.y;
     hintsPtr->win_gravity = wmPtr->gravity;
-    hintsPtr->flags = wmPtr->sizeHintsFlags | PMinSize | PMaxSize;
+    hintsPtr->flags = wmPtr->sizeHintsFlags | PMinSize;
 
     /*
      * If the window isn't supposed to be resizable, then set the
