@@ -1,3 +1,8 @@
+2004-04-04  Joe English  <jenglish@users.sourceforge.net>
+	* unix/tkUnixWm.c: Fix for bug #915350  "Tk sets min, max size in
+	WM_HINTS when it shouldn't" and #922336 "Tk apps have no maximize
+	window button under KDE-3.2.1"
+
 2004-03-31  Jim Ingham  <jingham@apple.com>
 
 	* tkMacOSXCarbonEvents.c (AppEventHandlerProc): Handle the 
